Get requests cursors (#119)
* properly setup cursor pagination

* added tests

* fixed order of scanned inputs from returned rows

* format tidy and uncomment clerk

* change map of status values to enum and create parameter pageSize to FindRequestsByCursor function and give it a default value

* change logic for returning number of items and rename FindRequestsByCursor to FindRequestsByStatusPaginated

* merge conflicts

* format and lint

* add hotel_id as a parameter to FindRequestsByStatusPaginated so we return rows only by their respective hotel
